# server-from-scratch

./: Cargo.toml  README.md
src/: common.rs  http.rs  http_request.rs  http_server.rs  lib.rs  main.rs  net.rs  socket.rs
src/common/: header.rs
src/http/: body.rs  common.rs  file_server.rs  header.rs  method.rs  request.rs  response.rs  server.rs  socket.rs  status.rs  thread_pool.rs  url.rs  version.rs
src/net/: file_server.rs  http_server.rs  socket.rs  thread_pool.rs
