[package]
name = "server-from-scratch"
version = "0.1.0"
authors = ["sanevillain <denis.ismail@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
mime_guess = "2.0.3"
ctrlc = { version = "3.0", features = ["termination"] }